public interface Command {
    WinLoseCheck execute();
}
